(lang dune 3.15)

(name sbsv)

(generate_opam_files true)

(source
 (github hsh814/sbsv-ocaml))

(authors "Seungheon Han")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name sbsv)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
